# mlmodelconsumer

./: .gitignore  CMakeLists.txt  README.md  descriptions.md
include/mlmodelconsumer/: bridge.hpp  fallback.hpp  geometry.hpp  model_output.hpp  model_source.hpp  result.hpp  translator.hpp  validation.hpp  version_check.hpp
src/: bridge.cpp  fallback.cpp  file_reader.cpp  local_inference.cpp  model_output.cpp  translator.cpp  validation.cpp
tests/: test_main.cpp
